--- a/Styles/faqja3.css
+++ b/Styles/faqja3.css
@@ -1,47 +1,49 @@
 nav {
     display: flex;
     justify-content: flex-end; 
-    background-color: black; 
-    padding: 10px;
+    background-color: darkolivegreen; 
+    padding: 20px;
   }
   nav a {
-    color: white;
+    color: yellowgreen;
     text-decoration: none;
     margin-left: 15px; 
   }
   nav a:hover {
-    color: red; 
+    color: green; 
   }
   body{
-    background-color: darkslategray;
+    background-color: darkred;
   }
-
   
   
-  .produkti {
+  .shamponi {
     text-align: center;
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
   }
   button{
-    background-color: dimgrey;
-    color: black;
+    background-color: darkgreen;
+    color: grey;
     width: 50px;
     height: 50px;
   }
   h2{
     font-size: 25px;
-    color: darkblue;
+    color: green;
   }
   p{
-    color: darkblue;
+    color: green;
   }
   a{
     display: flex;
     justify-content: flex-end;
     text-align: right;
     align-items: flex-end;
-    color: black;
+    color: red;
 
+  }
+  h1{
+    color: green;
   }
